# typotronic

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README  README.md  report.org
typo/: CMakeLists.txt  costs.cpp  costs.hpp  io.cpp  io.hpp  layout.cpp  layout.hpp  main.cpp  min_table.cpp  min_table.hpp  test.cpp  typo.cpp  typo.hpp  util.cpp  util.hpp
